@@ -31,7 +31,8 @@
  * 08/07/2014      RC          4.0.0      Updated ReactiveCommand to 6.0.
  * 11/24/2015      RC          4.3.1      Select ENS and BIN as default options for playback files.
  * 12/03/2015      RC          4.4.0      Added record button and recording to file to the record button.
- * 10/23/2017      RC          4.6.1      In LoadFiles() first check if its a binary file, then try all codec types.          
+ * 10/23/2017      RC          4.6.1      In LoadFiles() first check if its a binary file, then try all codec types. 
+ * 05/01/2018      RC          4.11.0     Moved loading data with CreateProject() for playback to PulseManager.
  * 
  */
 
@@ -42,6 +43,7 @@ namespace RTI
 {
     using System;
     using System.Collections.Generic;
+    using System.Diagnostics;
     using System.IO;
     using System.Linq;
     using System.Text;
@@ -431,52 +433,8 @@ namespace RTI
         /// <returns>Project with ensemble data.</returns>
         private Project CreateProject(string filepath, Cache<long, DataSet.Ensemble> ensembles)
         {
-            // Get the file name from the file path
-            string filename = Path.GetFileNameWithoutExtension(filepath);
-
-            // Create an empty project.
-            Project project = null;
-
-            if (!string.IsNullOrEmpty(filename))
-            {
-                // Get a list of all the projects
-                var list = _pm.GetProjectList();
-
-                // Look to see if the project exist
-                // If the project name exist, but it is not the same number of ensembles,
-                // create a new unique name.  If it matches the previous project, then just load that project.
-                foreach (var prj in list)
-                {
-                    if (prj.ProjectName == filename)
-                    {
-                        // Check if the same number of ensembles 
-                        if (prj.GetNumberOfEnsembles() == ensembles.Count())
-                        {
-                            // This project already exist
-                            return prj;
-                        }
-
-                        // Create a unique filename
-                        filename = filename + "_" + DateTime.Now.ToString("yyyyMMddHHmmss");
-                    }
-                }
-
-                // Create the new project based off
-                // the project name and project directory
-                project = new Project(filename, RTI.Pulse.Commons.GetProjectDefaultFolderPath(), null);
-
-                // Write the ensembles to the project
-                //project.RecordDbEnsemble(ensembles);
-                AdcpDatabaseWriter writer = new AdcpDatabaseWriter(false);
-                writer.WriteFileToDatabase(project, ensembles);
-
-                // Add project to DB
-                _pm.AddNewProject(project);
-
-                project.Dispose();
-            }
-
-            return project;
+            // Create a project or reload an old project
+            return _pm.CreateProject(filepath, ensembles);
         }
 
         #endregion
