@@ -187,7 +187,7 @@
                 <TextBlock Text="Data Format" Foreground="{StaticResource PulseFontHighlightColor}" HorizontalAlignment="Center" FontWeight="Bold" />
             </StackPanel>
 
-            <ToggleButton Margin="40,5,5,5" Width="110" Background="White" BorderBrush="Gray" BorderThickness="2" IsChecked="{Binding IsRecording}">
+            <ToggleButton Margin="40,5,5,5" Width="110" Background="White" BorderBrush="Gray" BorderThickness="2" IsChecked="{Binding IsRecording}" ToolTip="Start or stop recording.  Data is recorded to C:\RTI_Capture.">
                 <StackPanel Orientation="Horizontal">
                     <Image Grid.Row="0" Source="{Binding RecordImage}" Width="30" Height="30" />
                     <StackPanel Margin="2">
