@@ -2,6 +2,9 @@
 
 Pulse-4.11.0
  - Updated how the Ensembles are passed to the display.
+ - Moved loading data with CreateProject() for playback to PulseManager in NavBarViewModel and SelectPlaybackViewModel.
+ - In NmeaDataSet, check for exceptions in SetValue() and SetNmeaStringArray().
+ - In SerialOptions, added 57600 baud rate.
 
 Pulse-4.10.1
  - Fixed bug in PD4/5 where the HeaderStart was not locked when clearing the codec.
